# pkg/api/types.gen.go
@@ -3,23 +3,12 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.0.0 DO NOT EDIT.
 package api
 
-// AddLensBody defines model for AddLensBody.
-type AddLensBody struct {
-	Description *string   `json:"description,omitempty"`
-	Owner       *string   `json:"owner,omitempty"`
-	Spec        *string   `json:"spec,omitempty"`
-	Tags        *[]string `json:"tags,omitempty"`
-}
+import (
+	"github.com/katallaxie/service-lense/internal/models"
+)
 
 // Lens defines model for Lens.
-type Lens struct {
-	Description *string   `json:"description,omitempty"`
-	Id          *string   `json:"id,omitempty"`
-	Name        *string   `json:"name,omitempty"`
-	Owner       *string   `json:"owner,omitempty"`
-	Spec        *string   `json:"spec,omitempty"`
-	Tags        *[]string `json:"tags,omitempty"`
-}
+type Lens = models.Lens
 
 // Pagination defines model for Pagination.
 type Pagination struct {
@@ -29,18 +18,10 @@ type Pagination struct {
 }
 
 // Workload defines model for Workload.
-type Workload struct {
-	Description *string `json:"description,omitempty"`
-	Environment *string `json:"environment,omitempty"`
-	Id          *string `json:"id,omitempty"`
-	Name        *string `json:"name,omitempty"`
-}
-
-// AddLensRequest defines model for AddLensRequest.
-type AddLensRequest = AddLensBody
+type Workload = models.Workload
 
 // AddLensJSONRequestBody defines body for AddLens for application/json ContentType.
-type AddLensJSONRequestBody = AddLensBody
+type AddLensJSONRequestBody = Lens
 
 // AddWorkloadJSONRequestBody defines body for AddWorkload for application/json ContentType.
 type AddWorkloadJSONRequestBody = Workload
